--- a/temp-style.css
+++ b/temp-style.css
@@ -242,9 +242,6 @@ h5{
     scroll-behavior: none;
 }
 
-.mail-me-form::-webkit-scrollbar { 
-    display: none;  // Safari and Chrome
-}
 
 #feedback-text{
     margin-top: 0px;
@@ -398,6 +395,30 @@ h5{
 
 
 #fixed{position: fixed;}
+
+.project-indiv-container{
+    position: relative;
+    overflow: hidden;
+    height: 350px;
+}
+.img-cover{
+    background-color: rgba(7, 73, 29, 0.8);
+    top: 80%;
+    width: 100%;
+    height: 340px;
+    position: absolute;
+    
+}
+.project-indiv-container:hover .img-cover{
+    animation: slideUp .3s linear forwards;
+    
+}
+
+@keyframes slideUp{
+    to{
+        top: 10%;
+    }
+}
 
 @media screen and (max-width:900px){
     #logo-container{
