--- a/temp-style.css
+++ b/temp-style.css
@@ -260,6 +260,15 @@ h5{
 .hide{display:none;}
 .show{display: block;}
 
+#top-nav{
+    background-color: rgb(0, 0, 0);
+    transition: all 1s;
+}
+#nav-name-text{
+    color: white;
+    transition: all 1s;    
+}
+
 #shift{
     margin-left: 14%;
 }
