--- a/temp-style.css
+++ b/temp-style.css
@@ -268,6 +268,9 @@ h5{
     color: white;
     transition: all 1s;    
 }
+.tabIcons{
+    font-size: 18px!important;
+}
 
 #shift{
     margin-left: 14%;
