--- a/temp-style.css
+++ b/temp-style.css
@@ -236,6 +236,10 @@ body{
 #top-nav-box{
     height: 12%;
 }
+.nav-wrapper{
+
+}
+
 
 h5{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
@@ -245,14 +249,17 @@ h5{
 #top-nav-box-items{
     margin-top: -1%;
 }
+
 #mar-top{
     margin-top: -50em;
 }
 .parallax-container{
-    border-top-left-radius: 30%;
-    border-top-right-radius: 30%;
-    border-bottom-right-radius: 30%;    
-    height: 400px;
+    border-bottom-right-radius: 40%;    
+    height: 90vh !important;
+}
+.thick-border{
+    border: 2px solid black;
+    border-radius: 50px;
 }
 .mail-me-form{
     position: absolute;
@@ -285,8 +292,8 @@ h5{
 .show{display: block;}
 
 #top-nav{
-    background-color: rgb(0, 0, 0);
-    transition: all 1s;
+    transition: all 0.5s;
+    background-color: transparent;
 }
 #nav-name-text{
     color: white;
@@ -322,7 +329,7 @@ h5{
 #top-nav-on-mobile{
     height: 60px;
     width: 100vw;
-    background-color: black;
+    background-color: transparent;
     position: fixed;
     top: 0;
     z-index: 100;
@@ -331,6 +338,10 @@ h5{
 }
 #hamburger-mobile{
     color: blue!important;
+}
+#slide-out{
+    z-index: 2 !important;
+    box-shadow: none !important;
 }
 #my-name-text-in-mobile{
     background-color: rgba(17, 182, 17, 0.2);
@@ -353,6 +364,12 @@ h5{
 .projects{
     height: 350px!important;
 }
+#buttons-in-parallax{
+    margin-top: 150px !important;
+}
+/* .paralax-btn-main{
+    padding: 10px 0 10px 0;
+} */
 
 #first-my-img-box{
     width: 100% ;
