--- a/temp-style.css
+++ b/temp-style.css
@@ -86,10 +86,28 @@ body{
     overflow-x: hidden;
     background-color: white !important;
 }
+#loader-wrapper{
+}
+
 #head-colored-box{
     width: 100vw ;
     height: 30vh ;
     margin-top: 0;
+}
+#info-in-parallax{
+    font-size: 18px;
+    letter-spacing: 20px;
+    background-color: rgba(0, 0, 0, 0.2);    
+    transition: 1s;
+    animation: cluster 1s linear forwards 1.5s;
+}
+#info-in-parallax:hover{
+    background-color: rgba(0, 0, 0, 0.3)
+}
+@keyframes cluster{
+    to{
+        letter-spacing: 2px;
+    }
 }
 
 .head-img-box{
@@ -106,7 +124,6 @@ body{
 .job-text{
     position: sticky ;
     top: 0 ;
-    margin-top: - ;
     
 }
 
@@ -196,7 +213,6 @@ body{
 }
 
 .details-header-content ul li a{
-    color:  ;
 }
 
 .details-header-content ul li a{
@@ -356,10 +372,10 @@ h5{
     padding-bottom: 5px;
 }
 #brief-me-fsize{
+    color: rgb(68, 67, 67);
     margin-top: 20%;
     font-size: 17px;
     line-height: 200%;
-    font-weight: ;
 }
 .projects{
     height: 350px!important;
