--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     width: 130% ;
     height: 130% ;
 }
+
 #border-bottom{
     border-bottom: 8px solid rgb(221, 31, 66) ;
 }
@@ -37,23 +38,63 @@
 }
 
 /*-------THIS STYLING IS FOR BLOG.HTML-----------------*/
-
+.styling{
+    color: black;
+}
 #blog-bdrop{
+    top: 0;
     width: 100% ;
     height: 250px ;
+    position: absolute;
 }
 #blog-text-blog{
-    margin-top: -10% ;
-    height: 150px ;
 }
 #blog-text-blog P{
-    font-size: 18px ;
+    font-size: 28px ;
+
 }
-#loader{
-    margin-top: 4% ;
+.head-img{
+    width: 80px;
+    height: 80px;
+    background-color: red;
+    margin-top: 4em;
 }
 
+
+.row h3{
+    font-weight: bolder;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 13em;
+
+}
+.post-title-mobile{
+margin-top: 17em !important;
+}
+.head-cont-p{
+    margin-top: 4em;
+    color: white;
+}
+.post-pic{
+    width: 80%;
+    margin-top: 0 !important;
+}
+.post-body{
+    
+    margin-top: 1em;
+}
+.post-body p{
+    font-size: 18px;
+}
+.post-title{
+    font-weight: bolder;
+    font-family: 'ZCOOL KuaiLe', cursive !important;
+}
      
+.post-remark{
+    font-weight: bold;
+    font-style: italic;
+}
 
 
 
