--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ margin-top: 17em !important;
 }
 .post-title{
     font-weight: bolder;
-    font-family: 'ZCOOL KuaiLe', cursive !important;
+    font-family: 'Rubik', sans-serif !important;
 }
      
 .post-remark{
