--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ margin-top: 17em !important;
 }
 .post-body p{
     font-size: 18px;
+    text-align: justify;
 }
 .post-title{
     font-weight: bolder;
